# siibra-compose

./: .gitignore  LICENSE.md  README.md  logger.py  main.py  pyproject.toml  setup.cfg  siibra-compose-schema.json  siibra-compose.json  util.py
src/siibra_compose/: cli.py  const.py  main.py  util.py
src/siibra_compose/tasks/: __init__.py  cfg.py  sapi.py  spy.py  sxplr.py
