[metadata]
name = siibra-compose
version = attr: siibra_compose.__version__
author = Xiao Gui
author_email = x.gui@fz-juelich.de
description = Conversion of images to the Neuroglancer pre-computed format
url = https://github.com/FZJ-INM1-BDA/siibra-compose

[options]
package_dir =
    = src
packages = find:
python_requires = ~=3.7
install_requires =
    requests
    click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    siibra-compose = siibra_compose.cli:cli
